// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Tile /> snapshots it renders with data attributes 1`] = `
<div>
  <div
    class="mfui-tile mfui-tile_theme_light mfui-tile_radius_default mfui-tile_shadow_zero"
    data-test="test"
  />
</div>
`;

exports[`<Tile /> snapshots renders component 1`] = `
<div>
  <div
    class="mfui-tile mfui-tile_theme_light mfui-tile_radius_default mfui-tile_shadow_zero"
  >
    Some test content
  </div>
</div>
`;

exports[`<Tile /> snapshots renders component with props 1`] = `
<div>
  <div
    class="mfui-tile mfui-tile_theme_dark mfui-tile_radius_rounded mfui-tile_shadow_high mfui-tile_pointer mfui-tile_interactive test-class"
  >
    <a
      class="mfui-tile__link"
      href="test-link"
      target="_blank"
    >
      Some test content
    </a>
  </div>
</div>
`;
